--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
+    "@mui/material": "^5.13.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
@@ -19,7 +23,9 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-redux": "^8.1.1",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zod": "^3.21.4"
   }
 }
